Tools/TestWebKitAPI/Tests/WebKit2Cocoa/IndexedDBMultiProcess.mm
@@ -81,7 +81,7 @@ TEST(IndexedDB, IndexedDBMultiProcess)
     receivedScriptMessage = false;
     RetainPtr<NSString> string3 = (NSString *)[lastScriptMessage body];
 
-    // Make a new web view with a new web process to finish the test
+    // Make a new web view with a new web process to continue the test
     RetainPtr<WKWebView> webView2 = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]);
 
     request = [NSURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"IndexedDBMultiProcess-2" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]];
@@ -95,6 +95,29 @@ TEST(IndexedDB, IndexedDBMultiProcess)
     EXPECT_WK_STREQ(@"Transaction complete", string2.get());
     EXPECT_WK_STREQ(@"Open success", string3.get());
     EXPECT_WK_STREQ(@"Value of foo: bar", string4.get());
+
+    TestWebKitAPI::Util::run(&receivedScriptMessage);
+    receivedScriptMessage = false;
+    RetainPtr<NSString> string5 = (NSString *)[lastScriptMessage body];
+    EXPECT_WK_STREQ(@"Get loops started", string5.get());
+
+    // Make a new web view with a new web process to continue the test
+    RetainPtr<WKWebView> webView3 = adoptNS([[WKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]);
+    request = [NSURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"IndexedDBMultiProcess-3" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]];
+    [webView3 loadRequest:request];
+
+    TestWebKitAPI::Util::run(&receivedScriptMessage);
+    receivedScriptMessage = false;
+    RetainPtr<NSString> string6 = (NSString *)[lastScriptMessage body];
+    EXPECT_WK_STREQ(@"Blocked!", string6.get());
+
+    // Kill the blocking web process
+    webView2 = nil;
+
+    TestWebKitAPI::Util::run(&receivedScriptMessage);
+    receivedScriptMessage = false;
+    RetainPtr<NSString> string7 = (NSString *)[lastScriptMessage body];
+    EXPECT_WK_STREQ(@"Deleted!", string7.get());
 }
 
 #endif
